--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <img src="img/logo.png" alt="Logo" width="80">
     </div>
 
-    <div class="form-login d-none">
+    <div class="form-login">
       <h3 class="mb-3">Iniciar Sesión</h3>
       <form>
         <div class="mb-3">
@@ -152,7 +152,7 @@
       </div>
     </div>
 
-    <div class="form-registro">
+    <div class="form-registro d-none">
       <h3 class="mb-3">Registrarse</h3>
       <form>
         <div class="mb-3">
@@ -186,5 +186,6 @@
     </footer>
     <script src="aja.js"></script>
 </body>
+
 
 </html>
