Add 'Ver' links to product descriptions
Added 'Ver' links to product descriptions for navigation.

--- a/top.html
+++ b/top.html
@@ -48,7 +48,7 @@
       <p><strong>Alex Turner:</strong> Este producto trae tanto valor, ¡me encanta!</p>
       <div>⭐⭐⭐⭐☆</div>
       <p><strong>Camila Rojas:</strong> Excelente rendimiento y diseño, lo recomiendo.</p>
-      <button class="btn mt-2">Agregar al carrito</button>
+      <a href="index.html">Ver</a>
     </div>
     <div class="col-md-6">
       <img src="img/cel1.jpeg" class="img-fluid rounded" alt="iPhone 13">
@@ -66,7 +66,7 @@
       <p><strong>Alex Turner:</strong> Potente y elegante, ideal para trabajo creativo.</p>
       <div>⭐⭐⭐☆☆</div>
       <p><strong>Laura Gómez:</strong> Lo uso para diseño gráfico y va perfecto.</p>
-      <button class="btn mt-2">Agregar al carrito</button>
+      <a href="index.html">Ver</a>
     </div>
   </div>
 
@@ -79,7 +79,7 @@
       <p><strong>Alex Turner:</strong> Buena calidad de imagen por el precio.</p>
       <div>⭐⭐⭐⭐⭐</div>
       <p><strong>Juan Pérez:</strong> Ideal para ver series, sonido excelente.</p>
-      <button class="btn mt-2">Agregar al carrito</button>
+      <a href="index.html">Ver</a>
     </div>
     <div class="col-md-6">
       <img src="img/tv3.webp" class="img-fluid rounded" alt="Televisor Hisense">
@@ -94,3 +94,4 @@
   <script src="aja.js"></script>
 </body>
 </html>
+
