Add modal for login and registration forms

--- a/modal.html
+++ b/modal.html
@@ -1,1 +1,38 @@
 
+<div class="overlay hidden"></div>
+
+<div class="modal hidden">
+  <div class="modal-content p-4 bg-light rounded position-relative">
+    <button class="btn-close border-0 bg-transparent position-absolute top-0 end-0 m-3">&times;</button>
+
+    <div class="text-center mb-4">
+      <img src="img/logo.png" alt="Logo" width="80">
+    </div>
+
+    <div class="form-login">
+      <h3 class="mb-3">Iniciar Sesión</h3>
+      <form>
+        <input type="email" class="form-control mb-2" placeholder="Correo">
+        <input type="password" class="form-control mb-2" placeholder="Contraseña">
+        <button type="submit" class="btn btn-primary w-100">Entrar</button>
+      </form>
+      <div class="text-center mt-3">
+        <button class="btn-registro-toggle btn btn-link">¿No tienes cuenta? Registrarse</button>
+      </div>
+    </div>
+
+    <div class="form-registro d-none">
+      <h3 class="mb-3">Registrarse</h3>
+      <form>
+        <input type="text" class="form-control mb-2" placeholder="Usuario">
+        <input type="text" class="form-control mb-2" placeholder="Nombre completo">
+        <input type="email" class="form-control mb-2" placeholder="Correo">
+        <input type="password" class="form-control mb-2" placeholder="Contraseña">
+        <button type="submit" class="btn btn-success w-100">Registrarse</button>
+      </form>
+      <div class="text-center mt-3">
+        <button class="btn-login-toggle btn btn-link">¿Ya tienes cuenta? Iniciar sesión</button>
+      </div>
+    </div>
+  </div>
+</div>
