Fix HTML encoding issues in top.html

--- a/top.html
+++ b/top.html
@@ -87,6 +87,9 @@
   </div>
 </div>
 
+<div id="modal-container"></div>
+
+  
   <footer class="text-center py-2 mt-5" style="background-color: #8ca0d7;">
     <p>&copy; 2025 Tienda Online - Derechos reservados</p>
   </footer>
@@ -94,5 +97,6 @@
   <script src="aja.js"></script>
 </body>
 </html>
+
 
 
