Fix HTML formatting and structure

--- a/top.html
+++ b/top.html
@@ -38,7 +38,7 @@
 
 
   <div class="container my-5">
-  <h2 class="text-center mb-4">🔥 Top Ventas</h2>
+  <h2 class="text-center mb-4">Top Ventas</h2>
 
   <div class="row align-items-center mb-5">
     <div class="col-md-6">
@@ -97,6 +97,7 @@
   <script src="aja.js"></script>
 </body>
 </html>
+
 
 
 
